--- a/html/blog.css
+++ b/html/blog.css
@@ -3,27 +3,30 @@ table {
     margin-right: 20%;
     border: 15px solid #Bdc3c7;
     padding: 10px;
+    font-family: Source Sans Pro;
 }
 
 h1 {
-    font-family: Source Sans Pro;
     margin: 10px;
     color: #2c3e50;
 }
 
 p {
     margin: 10px;
-    font-family: Source Sans Pro;
     margin-top: 10px;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
 }
 
-p.date {
+.quote {
+    border-left: 5px solid #Bdc3c7;
+    padding-left: 5px;
+}
+
+.date {
     color: #3498db;
-    font-family: Source Sans Pro;
     margin: 10px;
     text-transform: uppercase;
-    letter-spacing: 2px;
+    letter-spacing: 3px;
     font-weight: 300px;
 }
 
