--- a/RESTblog/views/show.ejs
+++ b/RESTblog/views/show.ejs
@@ -11,6 +11,9 @@
             <div class="description">
                 <p><%= blog.body %></p>
             </div>
+            <form action="/blogs/<%= blog._id %>?_method=PUT" method="POST">
+                <button class="ui orange basic button">EDIT</button>
+            </form>
             <form action="/blogs/<%= blog._id %>?_method=DELETE" method="POST">
                 <button class="ui red basic button">DELETE</button>
             </form>
